--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,10 @@
 site_name: 'CoderDojo TC Java'
 nav:
   - CoderDojo TC: https://coderdojotc.github.io/CoderDojoTC/
-  - Beginning Python - Trinket:
-    - Introduction: trinket/00-introduction.md
-    - Trinket Account: trinket/01-turtle-graphics.md
-    - Turtle Square: trinket/02-simple-square.md
-    - Variables: trinket/03-variables.md
+  - Beginning Java - Repl.it:
+    - Introduction: beginner/00-introduction.md
+    - Objects: beginner/01-objects.md
+    - Variable: trinket/03-variables.md
     - Loops: trinket/04-loops.md
     - Conditional: trinket/05-conditionals.md
     - Functions: trinket/06-functions.md
@@ -16,45 +15,15 @@ nav:
     - Random Stars: trinket/13-random-stars.md
     - Input: trinket/11-input.md
     - Recursion: trinket/12-recursion.md
-  - Beginning Python - Repl.it:
-    - Square: repl/02-square.md
-    - Flower: repl/07-flower.md
-    - Recursion: repl/12-recursion.md
-  - Intermediate Python:
-    - Introduction: intermediate/intro.md
-    - Variables and Scope: intermediate/01-variables-scope.md
-    - Data Types: intermediate/02-data-types.md
-    - Data Types & Function Parameters: intermediate/03-data-type-validation.md
-    - Maps: intermediate/04-maps.md
-    - Files: intermediate/05-files.md
-    - Images: intermediate/06-images.md
-    - Modules: intermediate/07-modules.md
-    - Dir: intermediate/08-dir.md
-    - Regular Expressions: intermediate/09-regex.md
-    - Debugging: intermediate/10-debugging.md
-    - Maze Solving with BFS: intermediate/bfsMaze.md
-    - Maze Solving with DFS: intermediate/dfsMaze.md
-  - Jupyter:
-    - Setup Turtle on Jupyter: jupyter/01-setup.md
-    - Drawing Box Labs: jupyter/02-draw-box.md
-    - Drawing Figure: jupyter/02-draw-figure.md
-    - Setup Canvas on Jupyter Lab: jupyter/02-canvas-setup.md
-    - Canvas Color Bars: jupyter/20-canvas-color-bars.md
-  - Pi:
-    - Python on Raspberry Pi: pi/01-intro.md
-  - Advanced Python:
-    - Stock Ticker Analysis: advanced/stocks.md
-    - MNIST Digit Prediction: advanced/mnist.md
-    
   - Contributing:
     - How to Contribute Examples: contribute.md
   - Contact:
     - Contact: contact.md
 
-site_description: 'Resources for teaching Python to CoderDojo Twin Cities students.'
-site_author: 'Dan McCreary'
-repo_name: 'python'
-repo_url: 'https://github.com/CoderDojoTC/python'
+site_description: 'Resources for teaching Java to CoderDojo Twin Cities students.'
+site_author: 'Aaron Korver'
+repo_name: 'java-dojo'
+repo_url: 'https://github.com/aaronkorver/java-dojo'
 edit_uri: 'blob/master/docs'
 theme:
   name: material
