--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
     - Objects: beginner/01-objects.md
     - Variables: beginner/02-variables.md
     - Data Types: beginner/03-datatypes.md
+    - Constructors: beginner/04-constructors.md
   - Contributing:
     - How to Contribute Examples: contribute.md
   - Contact:
